--- a/requirements.txt
+++ b/requirements.txt
@@ -1,253 +1,2 @@
-﻿absl-py==1.0.0
-aflr==0.8.1
-altgraph==0.17.2
-amqp==5.1.1
-asgiref==3.5.2
-asttokens==2.0.8
-astunparse==1.6.3
-async-generator==1.10
-atomicwrites==1.4.0
-attrs==21.4.0
-autopep8==1.6.0
-backcall==0.2.0
-backports.csv==1.0.7
-beautifulsoup4==4.10.0
-billiard==3.6.4.0
-blis==0.9.1
-bs4==0.0.1
-cachelib==0.6.0
-cachetools==4.2.2
-catalogue==2.0.8
-celery==5.0.5
-certifi==2021.10.8
-cffi==1.15.0
-chardet==4.0.0
-charset-normalizer==2.0.10
-chatbotAI==0.3.1.3
-cheroot==8.6.0
-CherryPy==18.6.1
-click==7.1.2
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.2.0
-clipboard==0.0.4
-cmake==3.22.5
-colorama==0.4.4
-confection==0.0.1
-contextlib2==21.6.0
-cryptography==36.0.1
-cvlib==0.2.7
-cycler==0.11.0
-cymem==2.0.6
-debugpy==1.6.3
-decorator==4.4.2
-dill==0.3.5.1
-distlib==0.3.4
-Django==4.1.1
-entrypoints==0.4
-etils==0.7.1
-execnet==1.9.0
-executing==0.10.0
-face-recognition-models==0.3.0
-facepy==1.0.12
-fake-headers==1.0.2
-feedparser==6.0.8
-ffmpeg==1.4
-filelock==3.6.0
-Flask==2.0.3
-Flask-Session==0.4.0
-flatbuffers==2.0
-flirimageextractor==1.4.0
-fonttools==4.28.5
-future==0.18.2
-gast==0.4.0
-glob2==0.7
-google==3.0.0
-google-api-core==2.7.1
-google-api-python-client==2.40.0
-google-auth==2.3.3
-google-auth-httplib2==0.1.0
-google-auth-oauthlib==0.5.0
-google-pasta==0.2.0
-googleapis-common-protos==1.55.0
-grpcio==1.43.0
-gTTS==2.2.4
-gunicorn==20.1.0
-h11==0.13.0
-h5py==3.6.0
-helper==2.5.0
-html5lib==1.1
-httplib2==0.20.4
-huepy==1.2.1
-huggingface-hub==0.9.1
-idna==3.3
-imageio==2.16.1
-imageio-ffmpeg==0.4.5
-importlib-metadata==4.10.1
-importlib-resources==5.9.0
-imutils==0.5.4
-iniconfig==1.1.1
-instabot==0.117.0
-instaloader==4.9
-ipykernel==6.15.1
-ipython==8.4.0
-itsdangerous==2.1.1
-jaraco.classes==3.2.1
-jaraco.collections==3.5.1
-jaraco.context==4.1.1
-jaraco.functools==3.5.0
-jaraco.text==3.7.0
-jedi==0.18.1
-Jinja2==3.0.3
-joblib==1.1.0
-jupyter-client==7.3.4
-jupyter-core==4.11.1
-keras==2.7.0
-Keras-Preprocessing==1.1.2
-kiwisolver==1.3.2
-kombu==5.2.4
-langcodes==3.3.0
-libclang==12.0.0
-loguru==0.5.3
-lxml==4.8.0
-Markdown==3.3.6
-MarkupSafe==2.1.0
-matplotlib==3.5.1
-matplotlib-inline==0.1.3
-mock==4.0.3
-more-itertools==8.12.0
-mouse==0.7.1
-moviepy==1.0.3
-murmurhash==1.0.8
-mysql==0.0.3
-mysql-connector-python==8.0.29
-mysqlclient==2.1.0
-nest-asyncio==1.5.5
-nltk==3.7
-numpy==1.22.0
-oauth2client==4.1.3
-oauthlib==3.1.1
-opencv-python==4.5.5.62
-opt-einsum==3.3.0
-outcome==1.1.0
-packaging==21.3
-pafy==0.5.5
-pandas==1.3.5
-parso==0.8.3
-path==16.4.0
-path.py==12.5.0
-pathy==0.6.2
-Pattern==3.6
-pdfminer.six==20211012
-pefile==2021.9.3
-pickleshare==0.7.5
-Pillow==9.0.0
-platformdirs==2.5.1
-pluggy==1.0.0
-portend==3.1.0
-praw==7.5.0
-prawcore==2.3.0
-preshed==3.0.7
-proglog==0.1.9
-progressbar==2.5
-promise==2.3
-prompt-toolkit==3.0.30
-protobuf==3.19.3
-psutil==5.9.1
-pure-eval==0.2.2
-py==1.11.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle==2.8.0
-pycparser==2.21
-pydantic==1.9.2
-Pygments==2.13.0
-pyinstaller==4.9
-pyinstaller-hooks-contrib==2022.0
-pyOpenSSL==22.0.0
-pyparsing==3.0.6
-pyperclip==1.8.2
-PySocks==1.7.1
-pytesseract==0.3.9
-pytest==7.1.1
-pytest-shutil==1.7.0
-python-dateutil==2.8.2
-python-docx==0.8.11
-python-dotenv==0.20.0
-pytube==12.1.0
-pytz==2021.3
-pywin32==303
-pywin32-ctypes==0.2.0
-PyYAML==6.0
-pyzmq==23.2.1
-regex==2022.3.2
-requests==2.27.1
-requests-oauthlib==1.3.0
-requests-toolbelt==0.9.1
-responses==0.20.0
-rsa==4.8
-schedule==1.1.0
-scikit-learn==1.0.2
-scipy==1.7.3
-seaborn==0.12.0
-selenium==4.1.0
-sgmllib3k==1.0.0
-six==1.16.0
-sklearn==0.0
-smart-open==5.2.1
-sniffio==1.2.0
-sortedcontainers==2.4.0
-soupsieve==2.3.1
-spacy==3.4.1
-spacy-legacy==3.0.10
-spacy-loggers==1.0.3
-SpeechRecognition==3.8.1
-sqlparse==0.4.2
-srsly==2.4.4
-stack-data==0.4.0
-tabulate==0.8.9
-tempora==5.0.1
-tensorboard==2.7.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.7.0
-tensorflow-datasets==4.6.0
-tensorflow-estimator==2.7.0
-tensorflow-io-gcs-filesystem==0.23.1
-tensorflow-metadata==1.9.0
-termcolor==1.1.0
-thinc==8.1.1
-threadpoolctl==3.0.0
-tokenizers==0.12.1
-toml==0.10.2
-tomli==2.0.1
-torch==1.12.1
-tornado==4.5.3
-tqdm==4.63.0
-traitlets==5.3.0
-transformers==4.21.3
-trio==0.19.0
-trio-websocket==0.9.2
-typer==0.4.2
-typing_extensions==4.0.1
-tzdata==2022.2
-undetected-chromedriver==3.1.3
-update-checker==0.18.0
-uritemplate==4.1.1
-urllib3==1.26.8
-vine==5.0.0
-virtualenv==20.13.3
-wasabi==0.10.1
-wcwidth==0.2.5
-webdriver-manager==3.5.4
-webencodings==0.5.1
-websocket-client==1.3.1
-websockets==10.2
-Werkzeug==2.0.2
-wget==3.2
-win32-setctime==1.0.4
-wrapt==1.13.3
-wsproto==1.0.0
-youtube-dl==2021.12.17
-zc.lockfile==2.0
-zipp==3.7.0
+transformers
+numpy
